Feature(#65): fcmCategory -> @Enumerated(EnumType.STRING) 적용